--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>know thyself</h1> 
+   <h1>know thyself</h1>
+   <h2>i am following my dream</h2>
 </body>
 </html>
