--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        input:focus{
+    font-weight: 70px;
+    font-size: large;
+    color: blue;
+}
+    </style>
 </head>
 <body>
    <h1>know thyself</h1>
@@ -12,5 +19,7 @@
    <p>Dhaka Bangladseh</p>
    <button>profile</button>
    <p>royel bengal tiger</p>
+   <input name="password"type="text">
+   
 </body>
 </html>
